--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "postcss src/index.css -o dist/output.css",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
